# mcp-bench

./: .gitignore  README.md  globals.py  pyproject.toml
agents/: langgraph_local_mcp_client.py
eval_functions/: benchmark_utils.py
few_shot_data/: mock_math_server_messages.jsonl
historical_trajectories/: sonnet-35-new-math.json
math_env/: __init__.py  tasks.json
servers/: math_mcp_server.py
